<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/background"

    tools:context=".FacturaActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/NewFactura"
                android:textAlignment="center"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textViewFechaFra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modificar_fecha"
                android:layout_marginBottom="55dp"
                android:backgroundTint="@color/colorBoton"
                android:textColor="@color/Titulos" />

            <TextView
                android:id="@+id/textViewClienteId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idCliente" />

            <TextView
                android:id="@+id/textViewClienteNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/textViewClienteNif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NIF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAnterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/colorBoton"
                    android:text="@string/btnAnterior"
                    android:textColor="@color/Titulos" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonSiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/colorBoton"
                    android:text="@string/btnSiguiente"
                    android:textColor="@color/Titulos" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewColeccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/colorBoton"
                android:text="@string/guardar"
                android:visibility="invisible" />


            <Button
                android:id="@+id/buttonContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/colorBoton"
                android:text="@string/btnContinuar"
                android:textColor="@color/Titulos" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginBottom="50dp">
                <Button
                    android:id="@+id/buttonCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/botonCancelar"
                    android:textColor="@color/Titulos"
                    android:alpha="0"/>
                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="275dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Menu"
                    app:srcCompat="@mipmap/menu_product_round" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>