<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ClientesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="800dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="35dp"
            android:text="@string/nuevoCliente"
            android:textAlignment="center"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/etClienteFra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/redondeo_bordes"
            android:hint="@string/nuevaEmpresa"
            android:inputType="text"
            android:minHeight="50dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etNumFra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/redondeo_bordes"
            android:hint="@string/idCliente"
            android:inputType="number"
            android:minHeight="50dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etNIF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/redondeo_bordes"
            android:hint="@string/NIF"
            android:inputType="text"
            android:minHeight="50dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etCodigoPostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/redondeo_bordes"
            android:hint="@string/cp"
            android:inputType="number"
            android:minHeight="50dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etLocalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/redondeo_bordes"
            android:hint="@string/comunidad"
            android:inputType="text"
            android:minHeight="50dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/redondeo_bordes"
            android:hint="@string/domicilio"
            android:inputType="text"
            android:minHeight="50dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/redondeo_bordes"
            android:hint="@string/infoAd"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:textAlignment="center" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/buttonGuardar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorBoton"
                android:text="@string/guardar"
                android:alpha="0"/>

            <ImageView
                android:id="@+id/guardar"
                android:layout_width="391dp"
                android:layout_height="60dp"
                android:contentDescription="@string/guardar"
                app:srcCompat="@mipmap/save_product_round" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginTop="52dp"
                android:layout_marginStart="160dp"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/guardar" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <Button
                android:id="@+id/buttonVerClientes"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Clientes"
                android:alpha="0"/>
            <ImageView
                android:id="@+id/clientes"
                android:layout_width="391dp"
                android:layout_height="65dp"
                android:contentDescription="@string/Clientes"
                app:srcCompat="@mipmap/clientes_product_round" />
            <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginTop="52dp"
                android:layout_marginStart="165dp"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/Clientes" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/buttonAtras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/botonCancelar"
                android:alpha="0"
                android:text="@string/cancel" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="395dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/Menu"
                app:srcCompat="@mipmap/menu_product_round" />


        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
